# decimator

./: .env  Cargo.toml  TODO.md  build.rs  com.malramsay.Decimator.gschema.xml  mod.rs  picture.rs
entity/: Cargo.toml
entity/src/: directory.rs  enum_flag.rs  enum_rating.rs  enum_selection.rs  lib.rs  picture.rs  prelude.rs
facial-recognition/: Cargo.toml  reference.py
facial-recognition/src/: anchors.rs  lib.rs  main.rs  model.rs
facial-recognition/tests/: anchor_test.rs  image_test.rs  load_test.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230802_113601_create_pictures_table.rs  m20250319_000211_create_directory_table.rs
migrations/: 20221212230811_create_pictures_table.sql  20221215223413_add_picked_column.sql  20221215223826_add_hidden_column.sql  20230403025822_thumbnails.sql
object-detection/: Cargo.toml
object-detection/src/: lib.rs  main.rs
resources/: decimator.ui  picture_preview.ui  picture_thumbnail.ui  picture_view.ui  preview_image.ui  resources.gresources.xml  thumbnail_image.ui
selection-list/: Cargo.toml
selection-list/src/: lib.rs  list.rs  main.rs  style.rs
src/: data.rs  directory.rs  import.rs  lib.rs  main.rs  menu.rs  picture.rs  picture_object.rs  preview.rs  progress.rs  telemetry.rs  thumbnail.rs  thumbnail_image.rs  widget.rs  window.rs
src/data/: picture.rs
src/picture/: filter.rs  flag.rs  image_widget.rs  pick.rs  picture_data.rs  picture_grid.rs  picture_object.rs  picture_path.rs  picture_preview.rs  picture_thumbnail.rs  picture_view.rs  property_types.rs  rating.rs  sort.rs  view_grid.rs  view_preview.rs
src/picture/property_types/: datetime.rs  flag.rs  rating.rs  selection.rs
src/relm_ext/: mod.rs  selection_ext.rs  typed_grid_view.rs  typed_list_item.rs  typed_list_view.rs
src/widget/: choice.rs  viewer.rs
src/widget/choice/: style.rs
