[package]
name = "decimator"
version = "0.1.0"
authors = ["Malcolm Ramsay <m@malramsay.com>"]
edition = "2021"
publish = false

[workspace]
members = [".", "entity", "migration", "selection-list"]

[dependencies]
entity = { path = "entity" }
selection-list = { path = "selection-list"}
kamadak-exif = "~0.5.5"
sea-orm = {version="~0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-time"]}
uuid = { version = "~1", features = ["v4", "serde"] }
camino = { version = "~1.1.1", features = ["serde1"] }
time = {version = "~0.3.17", features = ["serde"] }
tracing = "~0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
walkdir = "~2.4"
anyhow = "~1.0.65"
log = "~0.4.17"
serde = { version = "~1.0.150", features = ["derive"] }
serde_json = "1.0.89"
futures = "0.3.28"
num_cpus = "1.15.0"
itertools = "^0.11"
iced = { version="0.10", features = ["image", "tokio", "lazy", "advanced"] }
iced_core = "*"
iced_style = "*"
iced_widget = "*"
image = { git = "https://github.com/Shnatsel/image", branch = "zune-jpeg-sneaky" }
dirs = "5.0.1"
tokio = "1.29.1"
rfd = { version = "0.11.4", default-features = false, features = ["xdg-portal"] }
lru = "0.11.0"
iced_aw = { git = "https://github.com/malramsay64/iced_aw", branch="flexible_grid", features = ["grid", "menu", "quad", "tab_bar", "selection_list"], default-features = false }
rayon = "1.7.0"

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package.zune-jpeg]
opt-level = 3
