[package]
name = "decimator"
version = "0.1.0"
authors = ["Malcolm Ramsay <m@malramsay.com>"]
edition = "2021"
publish = false

[workspace]
members = [".", "entity", "migration", "selection-list"]

[dependencies]
entity = { path = "entity" }
selection-list = { path = "selection-list"}
kamadak-exif = "~0.5.5"
sea-orm = {version="~0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-time"]}
uuid = { version = "~1", features = ["v4", "serde"] }
camino = { version = "~1.1.1", features = ["serde1"] }
time = {version = "~0.3.17", features = ["serde"] }
tracing = "~0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.2"
walkdir = "~2.4"
anyhow = "~1.0.65"
log = "~0.4.17"
serde = { version = "~1.0.150", features = ["derive"] }
serde_json = "1.0.89"
futures = "0.3.28"
num_cpus = "1.15.0"
itertools = "^0.12"
iced = { version="0.12", features = ["image", "tokio", "lazy", "advanced"] }
# The menu is currently not updated for the latest master relase of iced
iced_aw = { version = "0.8", features = ["menu", "grid", "quad", "tab_bar", "wrap", "segmented_button"], default-features = false }
image = "*"
dirs = "5.0.1"
tokio = "*"
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }
lru = "0.12"
rayon = "1.7.0"

[profile.release]
lto = "thin"
opt-level = 3
