[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {version = "*"}
serde = {version = "1", features = ["derive"]}
uuid = { version = "~1", features = ["v4", "serde"] }
camino = { version = "~1.1", features = ["serde1"] }

[lib]
name = "entity"
path = "src/lib.rs"
