[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
sea-orm = {version = "*", features = ["runtime-tokio-rustls", "sqlx-sqlite"]}
sea-orm-migration = {version = "*", features = ["runtime-tokio-rustls", "sqlx-sqlite"]}
